welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:4: error: not found: value getHauteurMonde
var tab = new Array[Color] (getHauteurMonde())
                            ^Array1:7: error: not found: value getHauteurMonde
	for (i <- 0 to getHauteurMonde() - 1) {
                       ^Array1:14: error: not found: value getHauteurMonde
	for (i <- 0 to getHauteurMonde() - 1) {
                       ^Array1:22: error: not found: value getLargeurMonde
for (i <- 1 to getLargeurMonde() - 1) {
               ^