welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {

var tab = new Array[Color] (getHauteurMonde())

def remplirTableau() {
	for (i <- 0 to getHauteurMonde() - 1) {
		tab(i) = getCouleurSol(c)
		avance()
	}
}

def faireColonne() {
	for (i <- 0 to getHauteurMonde() - 1) {
		setCouleurBrosse(i) == tab(i)
		baisseBrosse()
		leveBrosse()
		avance()
	}
}

for (i <- 1 to getLargeurMonde() - 1) {
	faireColonne()
	avance()
	droite()
	avance()
	gauche()
}	
	
}
	
